--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,9 @@ sudo: required
 services:
   - docker
 before_install:
-  - docker build -t shiva/reactFibonacci -f ./client/Dockerfile.dev ./client
+  - docker build -t shiva/Fibonacci-react -f ./client/Dockerfile.dev ./client
 scripts:
-  - docker run -e CI=true shiva/reactFibonacci npm run test
+  - docker run -e CI=true shiva/Fibonacci-react npm run test
   # production build
 after_success:
   - docker build -t shiva/multi-client ./client
